fixed nav scrolly/jump issue maybe

--- a/make/2019/style/main.css
+++ b/make/2019/style/main.css
@@ -59,8 +59,8 @@ span.bld {
 .content {
 	width: 100%;
 	text-align: center;
-	padding-bottom: 5vh;
 }
+
 
 .button {
 	background-color: #BB0000;
